--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1> Dallin's Porfolio </h1>
   <br>
   <br>
-  <h2> About </h2>
+  <h2> About Me </h2>
   <br>
   <p> Hello! I am Dallin Reber. Here is a short portfolio showing some of my strengths. </p>
   <br>
